--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
   <script src="https://d3js.org/d3.v4.min.js"></script>
 <style>
         .chart rect {
-            fill: blue;
+            fill: green;
         }
 
         .chart text {
