orange_bar_test

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,9 +3,9 @@
 <head>
   <% include ../partials/header.ejs %>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-<style>
+	<style>
         .chart rect {
-            fill: green;
+            fill: orange;
         }
 
         .chart text {
