all_4_chart_worked

--- a/views/pages/barchart2.ejs
+++ b/views/pages/barchart2.ejs
@@ -97,7 +97,7 @@
         tooltip.style("opacity", 1)
                .style("left",(d3.event.pageX)+"px")
                .style("top",(d3.event.pageY)+"px")
-               .html("Employer:"+d[xColumn]+",count:"+d[yColumn]);
+               .html("Employer:"+d[xColumn]+"\n"+",Count:"+d[yColumn]);
         })
         .on("mouseout", function() { tooltip.style("opacity", 0) })
 
