--- a/views/pages/bubble_chart.ejs
+++ b/views/pages/bubble_chart.ejs
@@ -4,16 +4,19 @@
   <% include ../partials/header.ejs %>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   
-<svg width="960" height="960" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
+<svg width="800" height="800" font-family="sans-serif" font-size="12" text-anchor="middle"></svg>
 <script>
 
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
 
-var format = d3.format(",d");
+var format = d3.format("d");
 
-var color = d3.scaleOrdinal(d3.schemeCategory20c);
+//var color = d3.scaleOrdinal(d3.schemeCategory20c);
+var color = d3.scaleLinear()
+			  .domain([5410, 53743])
+			  .range(["orange", "green"]);
 
 var pack = d3.pack()
     .size([width, height])
@@ -45,24 +48,24 @@ d3.csv("bubblechart.csv", function(d) {
   node.append("circle")
       .attr("id", function(d) { return d.id; })
       .attr("r", function(d) { return d.r; })
-      .style("fill", function(d) { return color(d.package); });
+      .style("fill", function(d) { return color(d.value); });
 
   node.append("clipPath")
-      .attr("id", function(d) { return "clip-" + d.id; })
+      .attr("id", function(d) { return d.id; })
     .append("use")
       .attr("xlink:href", function(d) { return "#" + d.id; });
 
   node.append("text")
-      .attr("clip-path", function(d) { return "url(#clip-" + d.id + ")"; })
+    .attr("clip-path", function(d) { return  d.id; })
     .selectAll("tspan")
-    .data(function(d) { return d.class.split(/(?=[A-Z][^A-Z])/g); })
+    .data(function(d) { return d.class.split(/(\s+)/g); })
     .enter().append("tspan")
-      .attr("x", 0)
-      .attr("y", function(d, i, nodes) { return 13 + (i - nodes.length / 2 - 0.5) * 10; })
-      .text(function(d) { return d; });
+    .attr("x", 0)
+    .attr("y", function(d, i, nodes) { return 14 + (i - nodes.length / 2 - 0.5) * 10; })
+    .text(function(d) { return d; });
 
   node.append("title")
-      .text(function(d) { return d.id + "\n" + format(d.value); });
+      .text(function(d) { return d.id + "\n" + "Count:" + format(d.value); });
 });
 
 </script>
