--- a/views/pages/barchart1.ejs
+++ b/views/pages/barchart1.ejs
@@ -1,43 +1,39 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <% include ../partials/header.ejs %>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <meta charset="utf-8">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-  	<style>
-    
-      .axis text {
-        font-family: 'Open Sans', sans-serif;
-        font-size: 10pt;
-      }
-      .axis .label {
-        font-size: 10pt;
-      }
+<meta charset="utf-8">
+<script src="https://d3js.org/d3.v4.min.js"></script>
 
-      .axis path, .axis line {
-        fill: none;
-        stroke: #000;
-        shape-rendering: crispEdges;
-      }
+<style>
+	.axis text {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 10pt;
+	}
+	.axis .label {
+	font-size: 10pt;
+	}
 
-      .x.axis text {
-        font-size: 10pt;
-      }
-	  
-    #tooltip {
-    opacity: 0;
-    position: absolute;
-    text-align: center;
-    width: 60px; height: 20px;
-    background: white;
-    border: 0px;
-    }
-    </style>
- </head>
- <body>
-	<div id="tooltip"></div>
-    <script>
+	.axis path, .axis line {
+	fill: none;
+	stroke: #000;
+	shape-rendering: crispEdges;
+	}
+
+	.x.axis text {
+	font-size: 10pt;
+	}
+  
+	#tooltip {
+	opacity: 0;
+	position: absolute;
+	text-align: center;
+	width: 60px; height: 20px;
+	background: white;
+	border: 0px;
+	}
+</style>
+	
+<div id="tooltip"></div>
+<div id="barchart1"></div>
+<script>
       var outerWidth = 760;
       var outerHeight = 500;
       var margin = { left: 90, top: 16, right: 30, bottom: 85 };
@@ -50,7 +46,7 @@
       var innerWidth  = outerWidth  - margin.left - margin.right;
       var innerHeight = outerHeight - margin.top  - margin.bottom;
 
-      var svg = d3.select("body").append("svg")
+      var svg = d3.select("#barchart1").append("svg")
         .attr("width",  outerWidth)
         .attr("height", outerHeight);
       var g = svg.append("g")
@@ -61,26 +57,21 @@
       var yAxisG = g.append("g")
         .attr("class", "y axis");
 
-      var xScale = d3.scale.ordinal().rangeBands([0, innerWidth], barPadding);
-      var yScale = d3.scale.linear().range([innerHeight, 0]);
-      // var colorScale = d3.scale.category20();
-	  var colorScale = d3.scale.ordinal().range(["green", "lightgreen", "orange", "red"]);
-
       
 	  var tooltip = d3.select("#tooltip");
 
-      var xAxis = d3.svg.axis().scale(xScale).orient("bottom")
-        .outerTickSize(0);
-      var yAxis = d3.svg.axis().scale(yScale).orient("left")
-        .ticks(5)
-        .outerTickSize(0);
 
       function render(data){
 
-        xScale.domain(data.map( function (d){ return d[xColumn]; }));
-        yScale.domain([0, d3.max(data, function (d){ return d[yColumn]; })]);
+	    var xScale = d3.scaleBand().domain(data.map( function (d){ return d[xColumn]; })).range([0, innerWidth], barPadding);
+        var yScale = d3.scaleLinear().domain([0, d3.max(data, function (d){ return d[yColumn]; })]).range([innerHeight, 0]);
+        // var colorScale = d3.scale.category20();
+	    var colorScale = d3.scaleOrdinal().range(["green", "lightgreen", "orange", "red"]);
         colorScale.domain(data.map(function (d){ return d[colorColumn]; }));
 
+		var xAxis = d3.axisBottom(xScale);
+        var yAxis = d3.axisLeft(yScale);
+	
         xAxisG
           .call(xAxis)
           .selectAll("text")  
@@ -92,13 +83,12 @@
 
         var bars = g.selectAll("rect").data(data);
         bars.enter().append("rect")
-          .attr("width", xScale.rangeBand());
-        bars
+          .attr("width", xScale.bandwidth())
           .attr("x", function (d){ return xScale(d[xColumn]); })
           .attr("y", function (d){ return yScale(d[yColumn]); })
           .attr("height", function (d){ return innerHeight - yScale(d[yColumn]); })
-          .attr("fill", function (d){ return colorScale(d[colorColumn]); });
-		bars.on("mouseover", function(d) {
+          .attr("fill", function (d){ return colorScale(d[colorColumn]); })
+		  .on("mouseover", function(d) {
         tooltip.style("opacity", 1)
                .style("left",(d3.event.pageX)+"px")
                .style("top",(d3.event.pageY)+"px")
@@ -116,6 +106,4 @@
 
       d3.csv("barchart_1.csv", type, render);
 
-    </script>
-</body>
-</html>
+</script>
