--- a/public/css/style.css
+++ b/public/css/style.css
@@ -394,7 +394,8 @@ p {
   width: 100%;
 }
 #fh5co-about .fh5co-2col {
-  width: 50%;
+  /* removes whitespace on project details section */
+  width: 100%;
 }
 @media screen and (max-width: 1200px) {
   #fh5co-about .fh5co-2col {
