--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -41,8 +41,13 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+
+	<!-- customized charts for boxplot -->
+	<script src="js/d3x.js"></script>
+	<script src="js/d3plus.js"></script>
+
+
     <style>
-    
       .axis text {
         font-family: 'Open Sans', sans-serif;
         font-size: 10pt;
@@ -63,15 +68,15 @@
 		stroke: #FFFFFF;
       }
 	  
-    #tooltip {
+    /* #tooltip {
     position: absolute;
 	text-align: center;
-    }
+    } */
 	
-	#tooltip2 {
+	/* #tooltip2 {
 	position: absolute;
 	text-align: center;
-    }
+    } */
     </style>
 	</head>
 	<body>
@@ -84,7 +89,7 @@
 				<div class="fh5co-text">
 					<div class="container">
 						<div class="row">
-							<h1 class="to-animate">Project</h1>
+							<h1 class="to-animate">DSTrend</h1>
 							<h2 class="to-animate">CS498-Data Visuvalization Final Project <span>by</span> Somu Palaniappan</h2>
 						</div>
 					</div>
@@ -104,11 +109,11 @@
 				<div class="container-fluid">
 					<div class="fh5co-menu-1">
 						<a href="#" data-nav-section="home">Home</a>
-						<a href="#" data-nav-section="about">About</a>
+						<a href="#" data-nav-section="about">Project Details</a>
 						<a href="#" data-nav-section="features">LCA Application Status</a>
 					</div>
 					<div class="fh5co-logo">
-						<a href="index.html">Project</a>
+						<a href="index.html">DS Trend</a>
 					</div>
 					<div class="fh5co-menu-2">
 						<a href="#" data-nav-section="menu">Top H1B Jobs</a>
@@ -127,10 +132,12 @@
 				<p class="to-animate"><span class="firstcharacter">T</span>he H-1B is an employment-based, non-immigrant visa category for temporary foreign workers in the United States. 
 				Every year, the US immigration department receives over > 300,000 petitions and selects 85,000 applications through a random process. 
 				The application data is available for public access to perform in-depth research and analysis. I utilized 2011-2016 H-1B petition disclosure data.</p>
-				<p> The Office of Foreign Labor Certification (OFLC) generates these data that contains useful information about the immigration programs including the H1-B visa. 
+				<p> The Office of Foreign Labor Certification (OFLC) generates Labor Condition Application (LCA) data that contains useful information about the immigration programs including the H1-B visa. 
 				The disclosure data updated annually is available at </p>
 				<p class="text-center to-animate"><a href="https://www.foreignlaborcert.doleta.gov/performancedata.cfm" class="btn btn-primary btn-outline">Data Link</a></p>
 				<p> Data Preparation / Cleaning Using R Language --> <a href="https://github.com/sharan-naribole/H1B_visa_eda/blob/master/data_processing.md"> Courtesy </a></p>
+				<p> Final project is the exact same rendition of MidTerm Project Using D3 <br> Midterm Project rendered using <a href="https://public.tableau.com/profile/somu.palaniappan#!/vizhome/CS498-DataViz-MidtermProject/Description"> Tableau </a></p>
+				<p> Adopted Martini Glass Visualization structure, mentioned the jump off point in the story, and streamlined the readers in one direction to finish the story </p>
 				<p> Join me in the journey of finding out answers to below questions using Data Visuvalization </p>
 			</div>
 		</div>
@@ -150,14 +157,14 @@
 							</li>
 							<li>
 								<blockquote>
-									<p>&ldquo;Like to know top H1B jobs specifically for the year 2016 and find out whether Jobs related to Data Science pops out. 
+									<p>&ldquo;What are the top H1B jobs specifically for the year 2016? and whether Jobs related to Data Science pops out?
 									If not, do further study on Data Science Job trends?&rdquo;</p>
 									<p class="quote-author">&mdash; Using Bubble Chart</p>
 								</blockquote>
 							</li>
 							<li>
 								<blockquote>
-									<p>&ldquo;Like to find out Data Science job trends over the year 2011- 2016 by filtering out jobs with "Data" word in it, and analyzing the wages to 
+									<p>&ldquo;Find Data Science job trends over the year 2011- 2016 by filtering out jobs with "Data" word in it, and analyze the wages to 
 									answer questions like, are the pay increasing? number of data science job positions increases over the year?&rdquo;</p>
 									<p class="quote-author">&mdash;Using ScatterPlot & Box Plot</p>
 								</blockquote>
@@ -182,6 +189,7 @@
 				<div class="row text-center fh5co-heading row-padded">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="heading to-animate">LCA Application Status</h2>
+						<p><b>Parameters:</b>percentage count of the 4 nominal variable <br><b>Triggers:</b>Mouse over</p>
 						<div id="tooltip"></div>
 						<div id="barchart1"></div>
 						<script>
@@ -190,9 +198,9 @@
 							  var margin = { left: 90, top: 16, right: 30, bottom: 85 };
 							  var barPadding = 0.2;
 
-							  var xColumn = "CaseStatus";
-							  var yColumn = "Percentage";
-							  var colorColumn = "CaseStatus";
+							  var xColumn_c1 = "CaseStatus";
+							  var yColumn_c1 = "Percentage";
+							  var colorColumn_c1 = "CaseStatus";
 
 							  var innerWidth  = outerWidth  - margin.left - margin.right;
 							  var innerHeight = outerHeight - margin.top  - margin.bottom;
@@ -212,13 +220,12 @@
 							  var tooltip = d3.select("#tooltip");
 
 
-							  function render(data){
+							  function render_c1(data){
 
-								var xScale = d3.scaleBand().domain(data.map( function (d){ return d[xColumn]; })).range([0, innerWidth], barPadding);
-								var yScale = d3.scaleLinear().domain([0, d3.max(data, function (d){ return d[yColumn]; })]).range([innerHeight, 0]);
-								// var colorScale = d3.scale.category20();
+								var xScale = d3.scaleBand().domain(data.map( function (d){ return d[xColumn_c1]; })).range([0, innerWidth], barPadding);
+								var yScale = d3.scaleLinear().domain([0, d3.max(data, function (d){ return d[yColumn_c1]; })]).range([innerHeight, 0]);
 								var colorScale = d3.scaleOrdinal().range(["green", "lightgreen", "orange", "red"]);
-								colorScale.domain(data.map(function (d){ return d[colorColumn]; }));
+								colorScale.domain(data.map(function (d){ return d[colorColumn_c1]; }));
 
 								var xAxis = d3.axisBottom(xScale);
 								var yAxis = d3.axisLeft(yScale);
@@ -235,17 +242,19 @@
 								var bars = g.selectAll("rect").data(data);
 								bars.enter().append("rect")
 								  .attr("width", xScale.bandwidth())
-								  .attr("x", function (d){ return xScale(d[xColumn]); })
-								  .attr("y", function (d){ return yScale(d[yColumn]); })
-								  .attr("height", function (d){ return innerHeight - yScale(d[yColumn]); })
-								  .attr("fill", function (d){ return colorScale(d[colorColumn]); })
+								  .attr("x", function (d){ return xScale(d[xColumn_c1]); })
+								  .attr("y", function (d){ return yScale(d[yColumn_c1]); })
+								  .attr("height", function (d){ return innerHeight - yScale(d[yColumn_c1]); })
+								  .attr("fill", function (d){ return colorScale(d[colorColumn_c1]); })
 								  .on("mouseover", function(d) {
 								tooltip.style("opacity", 1)
-									   .style("left",(d3.event.pageX)+"px")
-									   .style("top",(d3.event.pageY)+"px")
-									   .html(+d[yColumn]+"%");
+										//d3.event.pageY property was returning very high value(6000 instead of 600) that was causing the tooltip to display outside the browser
+										//As a workaround, commented dynamic positioning of tooltip and made it to always display above the chart
+									   //.style("left",(d3.event.pageX)+"px")
+									   //.style("top",(d3.event.pageY)+"px")
+									   .html(d[xColumn_c1]+"==>"+d[yColumn_c1]);
 								})
-								.on("mouseout", function() { tooltip.style("opacity", 0) })
+								.on("mouseout", function() { tooltip.style("opacity", 0).style("background","white") })
 
 								bars.exit().remove();
 							  }
@@ -255,7 +264,7 @@
 								return d;
 							  }
 
-							  d3.csv("barchart_1.csv", type, render);
+							  d3.csv("barchart_1.csv", type, render_c1);
 
 						</script>
 						<p class="sub-heading to-animate">About 88.7+6.7 = 95.4% of application got certified. Hence the risk is very low. </p>
@@ -271,8 +280,9 @@
 				<div class="row text-center fh5co-heading row-padded">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="heading to-animate">Top H1B Jobs</h2>
+						<p><b>Parameters:</b>count of "Job Names" for the year 2016<br><b>Triggers:</b>Mouse over</p>
 						<div id="bubble">
-							<svg width="800" height="800" font-family="sans-serif" font-size="12" text-anchor="middle"></svg>
+							<svg width="800" height="600" font-family="sans-serif" font-size="12" text-anchor="middle"></svg>
 						</div>
 						<script>
 
@@ -351,9 +361,40 @@
 				<div class="row text-center fh5co-heading row-padded">
 					<div class="col-md-8 col-md-offset-2 to-animate">
 						<h2 class="heading">Data Science Job Trends</h2>
+						<h3>Jump off point in Maritini Glass Visuvalization Structure.</h3>
+						<p><b>Parameters:</b>Wages details for all Jobs with "Data" word in it for each year<br><b>Triggers:</b>Click to expand,mouseover for details,switch between 
+						scatter and box plot,click and drag to filter years</p>
+						<p><a href="/boxplot"> Click to expand & Play </a></p>
+						<div id="viz"></div>
+						<script>
+						function render(data){
+						var visualization = d3plus.viz()
+							.container("#viz")
+							.data(data)
+							.type("box")
+							.id(["id","JobTitle","EmployerName"])
+							.x("Year")
+							.y("Wage")
+							.time("Year")
+							.ui([{ 
+								"label": "Visualization Type",
+								"method": "type", 
+								"value": ["scatter","box"]
+							}])
+							.draw()
+						}
 						
-						<p class="sub-heading">It is evident from box plots over the year 2011-2016 that the number of data science jobs are increasing exponentially. 
-						[Visually it is clear by seeing number of data points that increases year over year] Median salary fluctuates year over year [Box Plot] and there is no clear trend seen. 
+							
+							function type(d){
+								d.Wage = +d.Wage;
+								return d;
+							}
+
+							
+							d3x.csv("boxplot.csv", type, render);
+						</script>
+						<p class="sub-heading">It is evident from scatter plots over the year 2011-2016 that the number of data science jobs are increasing exponentially. 
+						[Visually it is clear by seeing number of data points that increases year over year] <br> Median salary fluctuates year over year [Box Plot] and there is no clear trend seen. 
 						Lower end salaries are because the data includes part time jobs.</p>
 					</div>
 				</div>
@@ -365,69 +406,107 @@
 				<div class="row text-center fh5co-heading row-padded">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="heading to-animate">Top Data Science Job Recruiters</h2>
-						<!-- grpah code goes here-->
-						<p class="sub-heading to-animate">we can clearly see mixture of retail, technology, banking sector, Life insurance and consulting companies.</p>
+						<h3>Streamlining the readers towards conclusion</h3>
+						<p><b>Parameters:</b>count of Employer who recruited for jobs with "Data" word in it for the year 2016<br><b>Triggers:</b>Mouse over</p>
+						<!-- grpah code goes here-->						
+						<div id="tooltip2"></div>
+						<div id="barchart2" style="background-image: url(images/wood_1.png);"></div>
+						<script>
+						  var outerWidth = 760;
+						  var outerHeight = 500;
+						  var margin = { left: 90, top: 16, right: 30, bottom: 85 };
+						  var barPadding = 0.2;
+
+						  var xColumn = "EmployerName";
+						  var yColumn = "Count";
+						  var colorColumn = "EmployerName";
+
+						  var innerWidth  = outerWidth  - margin.left - margin.right;
+						  var innerHeight = outerHeight - margin.top  - margin.bottom;
+
+						  var svg_c4 = d3.select("#barchart2").append("svg")
+							.attr("width",  outerWidth)
+							.attr("height", outerHeight);
+						  var g_c4 = svg_c4.append("g")
+							.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+						  var xAxisG1 = g_c4.append("g")
+							.attr("class", "x axis")
+							.attr("transform", "translate(0," + innerHeight + ")");
+						  var yAxisG1 = g_c4.append("g")
+							.attr("class", "y axis");
+
+						  
+						  var tooltip2 = d3.select("#tooltip2");
+
+
+						  function render_c4(data){
+
+							var xScale = d3.scaleBand().domain(data.map( function (d){ return d[xColumn]; })).range([0, innerWidth], barPadding);
+							var yScale = d3.scaleLinear().domain([0, 16]).range([innerHeight, 0]);
+							// var colorScale = d3.scale.category20();
+							var colorScale = d3.scaleOrdinal(d3.schemeCategory20);
+							colorScale.domain(data.map(function (d){ return d[colorColumn]; }));
+							
+							var xAxis1 = d3.axisBottom(xScale);
+							var yAxis1 = d3.axisLeft(yScale);
+						
+
+							yAxisG1.call(yAxis1);
+
+							var bars = g_c4.selectAll("rect").data(data);
+							bars.enter().append("rect")
+							  .attr("width", xScale.bandwidth())
+							  .attr("x", function (d){ return xScale(d[xColumn]); })
+							  .attr("y", function (d){ return yScale(d[yColumn]); })
+							  .attr("height", function (d){ return innerHeight - yScale(d[yColumn]); })
+							  .attr("fill", function (d){ return colorScale(d[colorColumn]); })
+							  .on("mouseover", function(d) {
+							tooltip2.style("opacity", 1)        
+									//d3.event.pageY property was returning very high value(6000 instead of 600) that was causing the tooltip to display outside the browser
+									//As a workaround, commented dynamic positioning of tooltip and made it to always display above the chart
+									//.style("left",(d3.event.pageX)+"px")
+									//.style("top",(d3.event.pageY)+"px")       
+								   .html("Employer:"+d[xColumn]+"\n"+",Count:"+d[yColumn]);
+							})
+							.on("mouseout", function() { tooltip2.style("opacity", 0) })
+
+							bars.exit().remove();
+						  }
+
+						  function type_c4(d){
+							d.population = +d.population;
+							return d;
+						  }
+
+						  d3.csv("barchart_2.csv", type_c4, render_c4);
+					</script>
+						<p class="sub-heading to-animate">when we mouseover, we can clearly see mixture of retail, technology, banking sector, Life insurance and consulting companies.</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-6 to-animate-2">
-						<h3>Contact Info</h3>
-						<ul class="fh5co-contact-info">
-							<li class="fh5co-contact-address ">
-								<i class="icon-home"></i>
-								5555 Love Paradise 56 New Clity 5655, <br>Excel Tower United Kingdom
-							</li>
-							<li><i class="icon-phone"></i> (123) 465-6789</li>
-							<li><i class="icon-envelope"></i>info@freehtml5.co</li>
-							<li><i class="icon-globe"></i> <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></li>
-						</ul>
+						<h3>Story Conclusion</h3>
+						<p> Based on emerging number of data science job requirements, good median income, oppurtunities spread over different fields makes data science a lucrative, 
+						futuristic job. <br> As per trend, we can expect data science to become one among top 10 H1B jobs with in 10 years of time frame. </p>
 					</div>
 					<div class="col-md-6 to-animate-2">
-						<h3>Reservation Form</h3>
-						<div class="form-group ">
-							<label for="name" class="sr-only">Name</label>
-							<input id="name" class="form-control" placeholder="Name" type="text">
-						</div>
-						<div class="form-group ">
-							<label for="email" class="sr-only">Email</label>
-							<input id="email" class="form-control" placeholder="Email" type="email">
-						</div>
-						<div class="form-group">
-							<label for="occation" class="sr-only">Occation</label>
-							<select class="form-control" id="occation">
-								<option>Select an Occation</option>
-							  <option>Wedding Ceremony</option>
-							  <option>Birthday</option>
-							  <option>Others</option>
-							</select>
-						</div>
-						<div class="form-group ">
-							<label for="date" class="sr-only">Date</label>
-							<input id="date" class="form-control" placeholder="Date &amp; Time" type="text">
-						</div>
-
-
-							
-						<div class="form-group ">
-							<label for="message" class="sr-only">Message</label>
-							<textarea name="" id="message" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
-						</div>
-						<div class="form-group ">
-							<input class="btn btn-primary" value="Send Message" type="submit">
-						</div>
-						</div>
+						<h3>Narrative Visualization Summary</h3>
+						<h4>Adopted Martini Glass Visuvalization</h4>
+						<li> <b>Scenes</b> are used in the form of scrolling slides </li>
+						<li> <b>Annotations</b> are mostly in the form of tool tip and axis</li>
+						<li> <b>Parameters</b> are specified for each chart </li>
+						<li> <b>Triggers</b> are specified for each chart. scrolling is a trigger used navigate between slide shows </li>
+					</div>
 				</div>
 			</div>
-		</div>
-
-		
+		</div>		
 	</div>
 
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row row-padded">
 				<div class="col-md-12 text-center">
-					<p class="to-animate">&copy; 2016 Foodee Free HTML5 Template. <br> Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a> <br> Tasty Icons Free <a href="http://handdrawngoods.com/store/tasty-icons-free-food-icons/" target="_blank">handdrawngoods</a>
+					<p class="to-animate">&copy; 2017 Somu Palaniappan. <br> Design Credits <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Modified by Somu Palaniappan</a> 
 					</p>
 					<p class="text-center to-animate"><a href="#" class="js-gotop">Go To Top</a></p>
 				</div>
@@ -435,9 +514,8 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<ul class="fh5co-social">
-						<li class="to-animate-2"><a href="#"><i class="icon-facebook"></i></a></li>
-						<li class="to-animate-2"><a href="#"><i class="icon-twitter"></i></a></li>
-						<li class="to-animate-2"><a href="#"><i class="icon-instagram"></i></a></li>
+						<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+						<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/somupalaniappan" data-format="hover" data-related="false"></script>
 					</ul>
 				</div>
 			</div>
