--- a/views/pages/boxplot.ejs
+++ b/views/pages/boxplot.ejs
@@ -2,8 +2,8 @@
 
 <meta charset="utf-8">
 
-<script src="//d3plus.org/js/d3.js"></script>
-<script src="//d3plus.org/js/d3plus.js"></script>
+<script src="js/d3x.js"></script>
+<script src="js/d3plus.js"></script>
 
 <div id="viz"></div>
 
@@ -32,6 +32,6 @@
       }
 
 	
-	d3.csv("boxplot.csv", type, render);
+	d3x.csv("boxplot.csv", type, render);
 </script>
 
