--- a/views/pages/scatterplot.ejs
+++ b/views/pages/scatterplot.ejs
@@ -29,7 +29,7 @@
 	}
 </style>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <div id="scatter"></div>
 
 <script>
