--- a/views/pages/index2.ejs
+++ b/views/pages/index2.ejs
@@ -364,8 +364,8 @@
 						<h3>Jump off point in Maritini Glass Visuvalization Structure.</h3>
 						<p><b>Parameters:</b>Wages details for all Jobs with "Data" word in it for each year<br><b>Triggers:</b>Click to expand,mouseover for details,switch between 
 						scatter and box plot,click and drag to filter years</p>
-						<p><a href="/scatterplot"> Scatter Plot with D3 </a></p>
-						<p><a href="/boxplot"> Click to expand & Play - Created using D3 PLUS</a></p>
+						<p><a href="/scatterplot"> Scatter Plot with D3 </a> To Satisfy requirement</p>
+						<p><a href="/boxplot"> Click to expand & Play </a> - Below Plot Created using D3 PLUS</p>
 						<div id="viz"></div>
 						<script>
 						function render(data){
@@ -512,6 +512,7 @@
 				    <p class="to-animate">Bubble Chart Credits <a href="https://bl.ocks.org/mbostock/4063269" target="_blank">Mike Bostock</a> Modified by Somu Palaniappan</a></p>
 					<p class="to-animate">Bar Chart Credits <a href="https://bl.ocks.org/flunky" target="_blank">Prof John C. Hart</a> Modified by Somu Palaniappan</a></p>
 					<p class="to-animate">Box Plot Credits <a href="http://d3plus.org/examples/basic/78018ce8c3787d4e30d9/" target="_blank">Alexandersimoes</a> Modified by Somu Palaniappan</a></p>
+					<p class="to-animate">Scatter Plot Credits <a href="http://bl.ocks.org/weiglemc/6185069" target="_blank">Michele Weigle</a> Modified by Somu Palaniappan</a></p>
 					<p> Searched and worked for weeks to find box plot in d3 package that let the reader to play with (For Martini Glass Structure), After spending weeks of time, ended up using 
                         d3plus. Used d3 Plus only for Box plot chart mainly for the purpose of achieveing maritin glass structure.</p>
 					<p class="text-center to-animate"><a href="#" class="js-gotop">Go To Top</a></p>
